--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -19,4 +19,7 @@
 	<div>
 		<ion-icon name="ios-arrow-dropdown-circle" class="or"></ion-icon>
 	</div>
+	<div padding>
+		<ion-label>Sign In with:</ion-label>
+	</div>
 </ion-content>
