--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -1,6 +1,6 @@
 
 <ion-content padding>
-	<div>
+	<div text-center>
 		<ion-icon name="heart" class="loginlogo"></ion-icon>
 	</div>
 	<ion-list>
@@ -13,13 +13,17 @@
 			<ion-input type="password"></ion-input>
 		</ion-item>
 	</ion-list>
-	<div padding>
+	<div text-center>
   		<button color=dark ion-button round>Sign In</button>
 	</div>
-	<div>
+	<div text-center>
 		<ion-icon name="ios-arrow-dropdown-circle" class="or"></ion-icon>
 	</div>
-	<div padding>
+	<div text-center>
 		<ion-label>Sign In with:</ion-label>
+		<button ion-button><ion-icon name="logo-facebook"></ion-icon></button>
+		<button ion-button><ion-icon name="logo-twitter"></ion-icon></button>
+		<button ion-button><ion-icon name="logo-googleplus"></ion-icon></button>
 	</div>
+	<br/><br/><br/><br/><a href>Don't have an account?</a>
 </ion-content>
