--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -25,5 +25,5 @@
 		<button ion-button><ion-icon name="logo-twitter"></ion-icon></button>
 		<button ion-button><ion-icon name="logo-googleplus"></ion-icon></button>
 	</div>
-	<br/><br/><br/><br/><a href (click)="register();">Don't have an account?</a>
+	<br/><br/><br/><br/><p (click)="register();"><u>Don't have an account?</u></p>
 </ion-content>
