--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -1,4 +1,6 @@
 
+
+
 <ion-content padding>
 	<div text-center>
 		<ion-icon name="heart" class="loginlogo"></ion-icon>
@@ -14,7 +16,7 @@
 		</ion-item>
 	</ion-list>
 	<div text-center>
-  		<button color=dark ion-button round>Sign In</button>
+  		<button color=dark (click)="signIn();" ion-button round>Sign In</button>
 	</div>
 	<div text-center>
 		<ion-icon name="ios-arrow-dropdown-circle" class="or"></ion-icon>
