--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,11 +1,12 @@
 <ion-header>
-  <ion-navbar hideBackButton>
-    <ion-title text-center>
-      TruFare
-    </ion-title>
+  <ion-navbar>
+    <button ion-button>
+		<ion-icon name="menu"></ion-icon>
+    </button>
+    <ion-title text-center>TruFare</ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-
+	
 </ion-content>
