--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -14,7 +14,7 @@
 		</ion-item>
 	</ion-list>
 	<div text-center>
-  		<button color=dark ion-button round>Sign In</button>
+  		<button color=dark ion-button round (click)="gui()">Sign In</button>
 	</div>
 	<div text-center>
 		<ion-icon name="ios-arrow-dropdown-circle" class="or"></ion-icon>
