--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,12 +1,23 @@
-<ion-header>
-  <ion-navbar>
-    <button ion-button>
-		<ion-icon name="menu"></ion-icon>
-    </button>
-    <ion-title text-center>TruFare</ion-title>
-  </ion-navbar>
-</ion-header>
-
-<ion-content padding>
-	
-</ion-content>
+<ion-menu [content]="content">
+  <ion-header>
+    <ion-toolbar>
+      <ion-title>Menu</ion-title>
+    </ion-toolbar>
+  </ion-header>
+  <ion-content>
+    <ion-list>
+      <button ion-item>
+        Home
+      </button>
+      <button ion-item>
+        Friends
+      </button>
+      <button ion-item>
+        Events
+      </button>
+      <button ion-item>
+        Close Menu
+      </button>
+    </ion-list>
+  </ion-content>
+</ion-menu>
