--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,23 +1,27 @@
 <ion-menu [content]="content">
-  <ion-header>
-    <ion-toolbar>
-      <ion-title>Menu</ion-title>
-    </ion-toolbar>
-  </ion-header>
-  <ion-content>
-    <ion-list>
-      <button ion-item>
+<ion-header>
+  <ion-navbar>
+    <button ion-button menuToggle icon-only>
+      <ion-icon name='menu'></ion-icon>
+    </button>
+    <ion-title>
+      Menus
+    </ion-title>
+  </ion-navbar>
+</ion-header>
+<ion-content padding>
+  <ion-list>
+      <button ion-item (click)="openPage(homePage)">
         Home
       </button>
-      <button ion-item>
+      <button ion-item (click)="openPage(friendsPage)">
         Friends
       </button>
-      <button ion-item>
+      <button ion-item (click)="openPage(eventsPage)">
         Events
       </button>
-      <button ion-item>
+      <button ion-item (click)="closeMenu()">
         Close Menu
       </button>
     </ion-list>
-  </ion-content>
-</ion-menu>
+</ion-content>
