--- a/src/pages/user/user.html
+++ b/src/pages/user/user.html
@@ -6,9 +6,9 @@
 -->
 <ion-header>
 
-  <ion-navbar>
-    <ion-title>user</ion-title>
-  </ion-navbar>
+<ion-toolbar>
+      <ion-title>Menu</ion-title>
+    </ion-toolbar>
 
 </ion-header>
 
