--- a/src/pages/register/register.html
+++ b/src/pages/register/register.html
@@ -5,24 +5,20 @@
 	</div>
 	<ion-list>
 		<ion-item>
-			<ion-label floating>Username</ion-label>
-			<ion-input type="text" [(ngModel)]="username"></ion-input>
-		</ion-item>
-		<ion-item>
 			<ion-label floating>Email</ion-label>
-			<ion-input type="text" [(ngModel)]="email"></ion-input>
+			<ion-input type="text" [(ngModel)]="user.email"></ion-input>
 		</ion-item>
 		<ion-item>
 			<ion-label floating>Password</ion-label>
-			<ion-input type="password" [(ngModel)]="pass1"></ion-input>
+			<ion-input type="password" [(ngModel)]="user.password"></ion-input>
 		</ion-item>
 		<ion-item>
 			<ion-label floating>Re-type Password</ion-label>
-			<ion-input type="password" [(ngModel)]="pass2"></ion-input>
+			<ion-input type="password" [(ngModel)]="cpass"></ion-input>
 		</ion-item>
 	</ion-list>
 	<div text-center>
-  		<button color=dark ion-button round>Sign me up!</button>
+  		<button color=dark ion-button round (click)="signUp(user, cpass);">Sign me up!</button>
 	</div>
 	<br/><br/><br/><br/><p (click)="toSignIn();">Already have an account? <u>Sign In</u></p>
 </ion-content>
