--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -13,7 +13,7 @@
 		</ion-item>
 	</ion-list>
 	<div text-center>
-  		<button color=dark (click)="signIn(user);" ion-button round>Sign In</button>
+  		<button color=secondary (click)="signIn(user);" ion-button block>Sign In</button>
 	</div>
 	<div text-center>
 		<ion-icon name="ios-arrow-dropdown-circle" class="or"></ion-icon>
