--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -53,7 +53,7 @@
 
 <div text-center>
 <br><br><br><br><img src="assets/img/tip.png" align="center">
-<br><br><br><br><button ion-button class="btn" color="secondary" outline large>New Trip</button>
+<br><br><br><br><button ion-button class="btn" color="secondary" (click)="route();" outline large >New Trip</button>
 <button ion-button color="secondary" outline large>My Trips</button>
 <br><button ion-button color="secondary" outline large>Trip Planner</button>
 <button ion-button color="secondary" outline large>Settings</button>
