--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -8,55 +8,31 @@
 </ion-header>
 
 <ion-menu [content]="content">
-<<<<<<< HEAD
-<ion-header>
-  <ion-navbar>
-    <button ion-button menuToggle icon-only>
-      <ion-icon name='menu'></ion-icon>
-    </button>
-    <ion-title>
-      Menus
-    </ion-title>
-  </ion-navbar>
-</ion-header>
-<ion-content padding>
-  <ion-list>
-      <button ion-item (click)="openPage(homePage)">
-        Home
-      </button>
-      <button ion-item (click)="openPage(friendsPage)">
-        Friends
-      </button>
-      <button ion-item (click)="openPage(eventsPage)">
-        Events
-      </button>
-      <button ion-item (click)="closeMenu()">
-        Close Menu
-      </button>
-    </ion-list>
-</ion-content>
-=======
   <ion-header>
-    <ion-toolbar>
-      <ion-title>Menu</ion-title>
-    </ion-toolbar>
+    <ion-navbar>
+      <button ion-button menuToggle icon-only>
+        <ion-icon name='menu'></ion-icon>
+      </button>
+      <ion-title>Menus</ion-title>
+    </ion-navbar>
   </ion-header>
   <ion-content>
     <ion-list>
-
       <button menuClose ion-item *ngFor="let p of pages" (click)="openPage(p)">
         {{ p.title }}
       </button>
-    </ion-list>
+  </ion-list>
   </ion-content>
 </ion-menu>
 
-<div text-center>
-<br><br><br><br><img src="assets/img/tip.png" align="center">
-<br><br><br><br><button ion-button color="secondary" (click)="route();" outline large >New Trip</button>
-<button ion-button color="secondary" outline large>My Trips</button>
-<br><button ion-button color="secondary" outline large>Trip Planner</button>
-<button ion-button color="secondary" outline large>Settings</button>
-</div>
+<ion-content>
+  <div text-center>
+    <br><br><br><br><img src="assets/img/tip.png" align="center">
+    <br><br><br><br><button ion-button color="secondary" (click)="route();" outline large>New Trip</button>
+    <button ion-button color="secondary" outline large>My Trips</button>
+    <br><button ion-button color="secondary" outline large>Trip Planner</button>
+    <button ion-button color="secondary" outline large>Settings</button>
+  </div>
+</ion-content>
 
 <ion-nav [root]="rootPage" #content swipeBackEnabled="false"></ion-nav>
