Maps and Routes

--- a/src/pages/route/route.html
+++ b/src/pages/route/route.html
@@ -3,3 +3,21 @@
     <ion-title>Route</ion-title>
   </ion-navbar>
 </ion-header>
+
+<ion-list>
+ <br><br><br><br><br><br><br><ion-item>
+ 	
+    <ion-label floating>Origin</ion-label>
+    <ion-input type=""></ion-input>
+  </ion-item>
+
+  <ion-item>
+  	<br><br><br><br>
+    <ion-label floating>Destination</ion-label>
+    <ion-input type=""></ion-input>
+  </ion-item>
+  
+<div text-center>
+  	<button color=secondary ion-button (click)="map();">GO!</button>
+</div>
+</ion-list>
