--- a/src/pages/map/map.html
+++ b/src/pages/map/map.html
@@ -6,7 +6,8 @@
 
 <ion-content>
 	<div text-center>
-   		 <br><br><img src="assets/img/map.jpg" align="center">
+		<p>{{ route }}</p>
+   		<br><br><img src="assets/img/map.jpg" align="center">
 	</div>
 
 	<br><button ion-button round (click)="selectRoutes();">Routes</button>
