--- a/src/pages/route/route.html
+++ b/src/pages/route/route.html
@@ -18,6 +18,6 @@
   </ion-item>
   
 <div text-center>
-  	<button color=secondary ion-button (click)="map(route.origin, route.destination);">GO!</button>
+  	<button color=secondary ion-button (click)="map(route);">GO!</button>
 </div>
 </ion-list>
