--- a/src/pages/map/map.html
+++ b/src/pages/map/map.html
@@ -10,5 +10,8 @@
    		<br><br><img src="assets/img/map.jpg" align="center">
 	</div>
 
-	<br><button ion-button round (click)="selectRoutes();">Routes</button>
+	<!--<br><button ion-button round (click)="selectRoutes();">Routes</button> 
+	https://asmaloney.com/2014/01/code/creating-an-interactive-map-with-leaflet-and-openstreetmap/
+	https://www.youtube.com/watch?v=LzN9r7DPgs0
+	-->
 </ion-content>
