--- a/src/pages/map/map.html
+++ b/src/pages/map/map.html
@@ -5,9 +5,8 @@
 </ion-header>
 
 <ion-content>
-	<div text-center>
-		<p>{{ route }}</p>
-   		<br><br><img src="assets/img/map.jpg" align="center">
+	<div class="map-container">
+		<div id="map" style="width: 100%; height: 100%"></div>
 	</div>
 
 	<!--<br><button ion-button round (click)="selectRoutes();">Routes</button> 
