--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,4 +1,4 @@
-<ion-header>
+<ion-header bar-positive>
   <ion-navbar>
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
@@ -6,6 +6,8 @@
     <ion-title>Home</ion-title>
   </ion-navbar>
 </ion-header>
+
+
 
 <ion-menu [content]="content">
   <ion-header>
@@ -25,14 +27,14 @@
   </ion-content>
 </ion-menu>
 
-<ion-content>
+<ion-content class="has-header">
   <div text-center>
-    <br><br><br><br><img src="assets/img/tip.png" align="center">
-    <br><br><br><br><button ion-button color="secondary" (click)="route();" outline large>New Trip</button>
+    <img src="assets/img/tip.png" align="center">
+    <button ion-button color="secondary" (click)="route();" outline large>New Trip</button>
     <button ion-button color="secondary" outline large>My Trips</button>
     <br><button ion-button color="secondary" outline large>Trip Planner</button>
     <button ion-button color="secondary" outline large>Settings</button>
   </div>
 </ion-content>
 
-<ion-nav [root]="rootPage" #content swipeBackEnabled="false"></ion-nav>
+<!--<ion-nav [root]="rootPage" #content swipeBackEnabled="false"></ion-nav> -->
