--- a/src/pages/map/map.html
+++ b/src/pages/map/map.html
@@ -5,6 +5,18 @@
 </ion-header>
 
 <ion-content>
+	<ion-fab top left>
+		<ion-list>
+			<ion-item>
+				<ion-label floating>Origin</ion-label>
+				<ion-input type="text"></ion-input>
+			</ion-item>
+			<ion-item>
+			  <ion-label floating>Destination</ion-label>
+			  <ion-input type="text"></ion-input>
+			</ion-item>
+		</ion-list>
+	</ion-fab>
 	<div class="map-container">
 		<div id="map" style="width: 100%; height: 100%"></div>
 	</div>
