--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -3,7 +3,7 @@
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>Home</ion-title>
+    <ion-title text-center>Home</ion-title>
   </ion-navbar>
 </ion-header>
 
@@ -30,10 +30,10 @@
 <ion-content class="has-header">
   <div text-center>
     <img src="assets/img/tip.png" align="center">
-    <button ion-button color="secondary" (click)="route();" outline large>New Trip</button>
-    <button ion-button color="secondary" outline large>My Trips</button>
-    <br><button ion-button color="secondary" outline large>Trip Planner</button>
-    <button ion-button color="secondary" outline large>Settings</button>
+    <button ion-button color="secondary" (click)="route();">New Trip</button>
+    <button ion-button color="secondary">My Trips</button>
+    <br><button ion-button color="secondary">Trip Planner</button>
+    <button ion-button color="secondary">Settings</button>
   </div>
 </ion-content>
 
