--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,11 +1,32 @@
+
 <ion-header>
   <ion-navbar>
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>Home</ion-title>
+    <ion-title>Mateo We Miss You</ion-title>
   </ion-navbar>
-</ion-header>
+  </ion-header>
+
+<ion-content>
+<div>
+<ion-list>
+  <ion-item>
+    <ion-label floating>Origin</ion-label>
+    <ion-input type="text"></ion-input>
+  </ion-item>
+  <ion-item>
+    <ion-label floating>Destination</ion-label>
+    <ion-input type="text"></ion-input>
+  </ion-item>
+</ion-list>
+</div>
+
+  <div class="map-container">
+    <div id="map" style="width: 100%; height: 100%"></div>
+  </div>
+</ion-content>
+
 
 <ion-menu [content]="content">
   <ion-header>
@@ -25,14 +46,5 @@
   </ion-content>
 </ion-menu>
 
-<ion-content>
-  <div text-center>
-    <br><br><br><br><img src="assets/img/tip.png" align="center">
-    <br><br><br><br><button ion-button color="secondary" (click)="route();" outline large>New Trip</button>
-    <button ion-button color="secondary" outline large>My Trips</button>
-    <br><button ion-button color="secondary" outline large>Trip Planner</button>
-    <button ion-button color="secondary" outline large>Settings</button>
-  </div>
-</ion-content>
 
 <ion-nav [root]="rootPage" #content swipeBackEnabled="false"></ion-nav>
